Update: structure code

--- a/01-general-knowledge/static-N-shared-lib/Makefile
+++ b/01-general-knowledge/static-N-shared-lib/Makefile
@@ -1,15 +1,38 @@
+.PHONY: obj shared
 
+PRJ_NAME := hello
+SHARED_LIB_NAME := libhello.so
 
-static:
-	ar rcs lib/static/libhello.a obj/helloKhanh.o obj/helloWorld.o
+CUR_DIR := .
+INC_DIR := $(CUR_DIR)/inc
+SRC_DIR := $(CUR_DIR)/src
+OBJ_DIR := $(CUR_DIR)/obj
+BIN_DIR := $(CUR_DIR)/bin
 
-link: 
-	gcc obj/main.o -Llib/static -lhello -o bin/statically-linked
- 
-all: 
-	gcc -c main.c -o obj/main.o -I./inc
-	gcc -c src/helloKhanh.c -o obj/helloKhanh.o -I./inc
-	gcc -c src/helloWorld.c -o obj/helloWorld.o -I./inc
-	
-clean:
-	rm -rf obj/* bin/*
+LIB_DIR := $(CUR_DIR)/lib
+LIB_STATIC_DIR := $(LIB_DIR)/static
+LIB_SHARED_DIR := $(LIB_DIR)/shared
+
+CC := gcc
+C_FLAGS := -c -fPIC -o
+
+# Create object files
+obj:
+	$(CC) $(C_FLAGS) $(OBJ_DIR)/main.o $(CUR_DIR)/main.c -I $(INC_DIR)
+	$(CC) $(C_FLAGS) $(OBJ_DIR)/hello_minh.o $(SRC_DIR)/hello_minh.c -I $(INC_DIR)
+	$(CC) $(C_FLAGS) $(OBJ_DIR)/hello_world.o $(SRC_DIR)/hello_world.c -I $(INC_DIR)
+
+# Create shared-lib
+shared:
+	$(CC) -shared $(OBJ_DIR)/* -o $(LIB_SHARED_DIR)/$(SHARED_LIB_NAME)
+
+install:
+	install $(LIB_SHARED_DIR)/$(SHARED_LIB_NAME) /usr/lib 
+
+all: obj shared install
+	$(CC)  $(OBJ_DIR)/main.o -L$(LIB_SHARED_DIR) -lhello -o $(BIN_DIR)/$(PRJ_NAME)
+
+clean: 
+	rm -rf $(OBJ_DIR)/*
+	rm -rf $(LIB_SHARED_DIR)/*
+	rm -rf $(BIN_DIR)/*
